docs/grammar.ebnf
(* CHRONOS Language Grammar — EBNF *)

program             = { module_directive } { require_statement } { top_level_decl } ;

module_directive    = "#![" module_path "]" ;
module_path         = identifier "::" identifier "(" expression ")" ;

require_statement   = "@require" module_import_path ";" ;
module_import_path  = identifier "::" identifier "::" "{" import_list "}" ;
import_list         = identifier { "," identifier } ;

top_level_decl      = contract_decl
                    | function_decl
                    | enumeration_decl
                    | type_alias ;

contract_decl       = "contract" IDENTIFIER "::" trait_list "{" { contract_member } "}" ;
trait_list          = IDENTIFIER { "," IDENTIFIER } ;
contract_member     = field_decl | method_decl | impl_block ;

field_decl          = annotation "field" IDENTIFIER ":" type_expr ";" ;
method_decl         = { annotation } "fn" IDENTIFIER "(" param_list ")" "->" type_expr block ;

annotation          = "@" IDENTIFIER [ "(" annotation_args ")" ] ;
annotation_args     = expression { "," expression } ;

param_list          = [ param { "," param } ] ;
param               = IDENTIFIER ":" type_expr ;

type_expr           = primitive_type
                    | generic_type
                    | reference_type
                    | tuple_type ;

primitive_type      = "Int8" | "Int16" | "Int32" | "Int64"
                    | "UInt8" | "UInt16" | "UInt32" | "UInt64"
                    | "Float32" | "Float64"
                    | "Bool" | "Char" | "String" | "Void" ;

generic_type        = IDENTIFIER "<" type_expr { "," type_expr } ">" ;
reference_type      = "&" [ "mut" ] type_expr ;
tuple_type          = "Tuple" "<" type_expr { "," type_expr } ">" ;

block               = "{" { statement } "}" ;

statement           = let_statement
                    | assignment
                    | expression_statement
                    | if_statement
                    | match_statement
                    | loop_statement
                    | iterate_statement
                    | return_statement
                    | guard_statement ;

let_statement       = "let" [ "mut" ] IDENTIFIER ":" type_expr "=" expression
                      [ "=>" error_handler ] ";" ;

expression          = literal
                    | method_call
                    | binary_expr
                    | unary_expr
                    | closure_expr
                    | "(" expression ")" ;

method_call         = expression "::" IDENTIFIER "(" named_arg_list ")" ;
named_arg_list      = [ named_arg { "," named_arg } ] ;
named_arg           = IDENTIFIER ":" expression ;

error_handler       = "|" IDENTIFIER "|" block ;
